# pattern_feedback_tool

./: .copier-answers.yml  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  .sourcery.yaml  404.html  Makefile  README.md  dodo.py  index.html  mkdocs.yml  noxfile.py  objects.inv  pyproject.toml  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/setup/: action.yml
.github/workflows/: ci_pipeline.yml  codeql-analysis.yml  update_docs.yml  upgrade-dependencies.yml
diagrams/mvp/: index.html
diagrams/mvp-wip/: index.html
diagrams/src/: mvp.puml
docs/: CNAME  README.md  gen_ref_nav.py
docs/CHANGELOG/: index.html
docs/CODE_TAG_SUMMARY/: index.html
docs/DEVELOPER_GUIDE/: index.html
docs/STYLE_GUIDE/: index.html
docs/diagrams/: mvp-wip.md  mvp.md
docs/docs/: CHANGELOG.md  CODE_TAG_SUMMARY.md  DEVELOPER_GUIDE.md  STYLE_GUIDE.md
modules/pattern_feedback_tool/_code_diagrams/: index.html
pattern_feedback_tool/: __init__.py  doit_tasks.py  graphics.py  lint_parsers.py  linters.py  settings.py
reference/SUMMARY/: index.html
reference/pattern_feedback_tool/: index.html
reference/pattern_feedback_tool/doit_tasks/: index.html
reference/pattern_feedback_tool/graphics/: index.html
reference/pattern_feedback_tool/lint_parsers/: index.html
reference/pattern_feedback_tool/linters/: index.html
reference/pattern_feedback_tool/settings/: index.html
search/: search_index.json
test-data/sample_code/: game_view.py  load_game_map.py
tests/: __init__.py  configuration.py  test_doit_tasks.py  test_graphics.py  test_lint_parsers.py  test_linters.py  test_settings.py  test_zz_pattern_feedback_tool.py
tests/assert-cache/test_doit_tasks/: test_task_test[ptw_task].json  test_task_test[task___build_diagrams].json  test_task_test[task___check].json  test_task_test[task___check_types].json  test_task_test[task___format].json  test_task_test[task___test].json  test_task_test[task___update].json  test_task_test[task___watch_changes].json  test_task_test[task__build_diagrams].json  test_task_test[task__check].json  test_task_test[task__check_types].json  test_task_test[task__format].json  test_task_test[task__priv_build_diagrams].json  test_task_test[task__priv_check].json  test_task_test[task__priv_check_types].json  test_task_test[task__priv_format].json  test_task_test[task__priv_test].json  test_task_test[task__priv_update].json  test_task_test[task__priv_watch_changes].json  test_task_test[task__test].json  test_task_test[task__update].json  test_task_test[task__watch_changes].json  test_task_test[task_build_diagrams].json  test_task_test[task_check].json  test_task_test[task_check_all].json  test_task_test[task_check_types].json  test_task_test[task_format].json  test_task_test[task_format_all].json  test_task_test[task_next_task].json  test_task_test[task_play].json  test_task_test[task_ptw].json  test_task_test[task_reset_map].json  test_task_test[task_test].json  test_task_test[task_watch_changes].json
tests/assert-cache/test_graphics/: test_run_code2flow.json  test_run_pycg.json
tests/assert-cache/test_lint_parsers/: test_parse_flake8_logs.json  test_parse_pylint_json_logs.json
tests/assert-cache/test_linters/: test_run_radon.json
