[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.0.1"
version_files = ["pyproject.toml", "pattern_feedback_tool/__init__.py"]

[tool.isort]
balanced_wrapping = true
default_section = "THIRDPARTY"
force_grid_wrap = 0
include_trailing_comma = true
known_first_party = "pattern_feedback_tool"
length_sort = false
line_length = 120
multi_line_output = 5

[tool.poetry]
name = "pattern_feedback_tool"
version = "0.0.1"
description = "Design Pattern Feedback Tool"
license = "MIT"
authors = ["Kyle King <dev.act.kyle@gmail.com>"]
maintainers = []
repository = "https://github.com/DesignPatternsAdventure/pattern_feedback_tool"
documentation = "https://github.com/DesignPatternsAdventure/pattern_feedback_tool/docs"
readme = "docs/README.md"
include = ["LICENSE.md"]
keywords = []
classifiers = [
    "Development Status :: 1 - Planning",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
] # https://pypi.org/classifiers/

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/DesignPatternsAdventure/pattern_feedback_tool/issues"
"Changelog" = "https://github.com/DesignPatternsAdventure/pattern_feedback_tool/blob/main/docs/docs/CHANGELOG.md"

[tool.poetry.dependencies]
python = "^3.10.5"
calcipy = ">=0.19.0"

[tool.poetry.dev-dependencies]
calcipy = { version = "*", extras = ["dev", "lint", "test"] }
